--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-  <head>
-    <title>TheNoob01</title>
-  </head>
-  
-  <body>
-    <h1>TheNoov</h1>
-  </body>
+    <head>
+        <input type="text" id="fileName"></input>
+        <button id="predictButton" onclick="predict()">Model Is Loading </button>
+        <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>
+        <script src=p5.js></script>
+        <script src=p5.dom.js></script>
+        <script src="sketch2.js"></script>
+        <h2 id="label"></h2>
+    </head>
 </html>
